@@ -11348,6 +11348,43 @@ libcob: prog.cob:16: warning: ' S U B' literal includes leading spaces which are
 AT_CLEANUP
 
 
+AT_SETUP([PROGRAM-ID / CALL with hyphen and underscore])
+AT_KEYWORDS([runmisc])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+
+       PROCEDURE DIVISION.
+       MAIN.
+           CALL "_SUB-PROG_NOW" USING 'X'.
+           STOP RUN.
+])
+
+AT_DATA([sub.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. "_SUB-PROG_NOW".
+
+       DATA DIVISION.
+       LINKAGE SECTION.
+       01  x  PIC X.
+
+       PROCEDURE DIVISION USING x.
+       MAIN.
+            DISPLAY "SUB GOT " X.
+            GOBACK.
+])
+
+AT_CHECK([$COMPILE_MODULE sub.cob], [0], [], [])
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+
+AT_CHECK([COB_PRE_LOAD=sub $COBCRUN_DIRECT ./prog], [0], 
+[SUB GOT X
+], [])
+
+AT_CLEANUP
+
+
 AT_SETUP([CALL with directory])
 AT_KEYWORDS([runmisc])
 
